new: first_step, linreg

--- a/py_data_science.ipynb
+++ b/py_data_science.ipynb
@@ -3,38 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05be996b-9b91-4f6c-a9ca-985507b88233",
+   "id": "412680e7-5f5d-42cf-be47-cfa037935612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d79726c6-af92-4691-9968-ab5cd90d30f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.3.4'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.__version__"
+    "# Import two external packages : numpy, that handles multi-dimensionnal arrays, and pandas, that manages indexes data frames\n",
+    "import pandas\n",
+    "import numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907882b7-6bea-46f6-ac2b-b0ebbf6d4c74",
+   "id": "d3d26588-9cfa-4b3f-924a-41a0fbdf1c1d",
    "metadata": {},
    "outputs": [],
    "source": []
