--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6ff51f46",
+   "metadata": {},
+   "source": [
+    "# Logistic regression\n",
+    "\n",
+    "\n",
+    "You saw it in the theoretical part, logistic regression is no regression, but classification. The logistic function to fit on our data is :\n",
+    "\n",
+    "$f(x)=\\frac{L}{1-e^{-k(x-x_0}}$\n",
+    "\n",
+    "In logistic regression, we always have $L=1$ $f(x)$ gives the probability for being one or the other of two states given $x$ (those states could be \"dead\" or \"alive\" given the age in medecin statistical studies for instance).\n",
+    "\n",
+    "$k$ is the \"coefficient\", coding for the width of the transition part, and $x_0$ is the \"intercept\", the coordinate with $f(x_0)=L/2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af01ba51",
    "metadata": {},
    "source": [
