chg: some new stuff

--- a/first_steps_exercise.ipynb
+++ b/first_steps_exercise.ipynb
@@ -10,7 +10,8 @@
     "* Write a second function that takes a list of floats as argument and returns its standard deviation.\n",
     "* Write a third function that takes a list of floats as argument and returns its mean and standard deviation\n",
     "* Write a function that takes into a path to a .txt file and loads its content into a list. The file will contain one float per line, you will find it in the project's directory under the name 'data_first_steps.txt'.\n",
-    "* Combine all those functions into a script that reads the file and returns the mean and standard deviation of its content"
+    "* Combine all those functions into a script that reads the file and returns the mean and standard deviation of its content\n",
+    "* Finally, objectify it : create a class Reader that initiates with a file path and has a method 'mean' and a method 'std'"
    ]
   },
   {
