--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ff51f46",
+   "id": "40a698dc",
    "metadata": {},
    "source": [
     "# Logistic regression\n",
@@ -10,7 +10,7 @@
     "\n",
     "You saw it in the theoretical part, logistic regression is no regression, but classification. The logistic function to fit on our data is :\n",
     "\n",
-    "$f(x)=\\frac{L}{1-e^{-k(x-x_0}}$\n",
+    "$f(x)=\\frac{L}{1-e^{-k(x-x_0)}}$\n",
     "\n",
     "In logistic regression, we always have $L=1$ $f(x)$ gives the probability for being one or the other of two states given $x$ (those states could be \"dead\" or \"alive\" given the age in medecin statistical studies for instance).\n",
     "\n",
