--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "You saw it in the theoretical part, logistic regression is no regression, but classification. The logistic function to fit on our data is :\n",
     "\n",
-    "$f(x)=\\frac{L}{1-e^{-k(x-x_0)}}$\n",
+    "$g(z)=\\frac{L}{1-e^{-k(z-z_0)}}$\n",
     "\n",
-    "In logistic regression, we always have $L=1$ $f(x)$ gives the probability for being one or the other of two states given $x$ (those states could be \"dead\" or \"alive\" given the age in medecin statistical studies for instance).\n",
+    "In logistic regression, we always have $L=1$. $f(x)$ then gives the probability for being one or the other of two states given $x$ (those states could be \"dead\" or \"alive\" given the age in medecin statistical studies for instance).\n",
     "\n",
     "$k$ is the \"coefficient\", coding for the width of the transition part, and $x_0$ is the \"intercept\", the coordinate with $f(x_0)=L/2$."
    ]
