--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "87396662-cd47-412b-a78e-f22b2b76ca61",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "<function mult at 0x7fc44c29c9d0>\n"
+      "<function mult at 0x7f3c742403a0>\n"
      ]
     }
    ],
@@ -56,6 +56,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11a8ede8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = mult(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f2752d4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "daf4b289-4025-4eea-a815-f907f82c8bd3",
    "metadata": {},
@@ -65,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "1ff8d812-c86c-439c-b9b5-486c18b36e99",
    "metadata": {},
    "outputs": [
@@ -82,21 +110,21 @@
     }
    ],
    "source": [
-    "x = int(3)  # x is an integer\n",
-    "print(\"x:\", x)\n",
     "y = 2  # y is also an integer\n",
+    "x = int(3.1)  # x is an integer\n",
+    "print(\"x:\", x)\n",
     "print(\"y:\", y)\n",
     "z: int = x + y  # Here the ': int' synthax serves only as a information, for readability purpose. It has zero impact on the execution of the code\n",
     "print(\"z:\", z)\n",
     "z = x / y  # Variables can be reassigned at will. Here z is a float\n",
     "print(\"z:\", z)\n",
-    "z: float = x + y  # writing 'float' while the actual type is 'int' will not cause a crash. It is fake news however, so don't do that.\n",
+    "z: int = x + y  # writing 'float' while the actual type is 'int' will not cause a crash. It is fake news however, so don't do that.\n",
     "print(\"z:\", z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "894a6be7-2717-4aa1-90e4-384043bd3729",
    "metadata": {},
    "outputs": [
@@ -126,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "c0a1120e-5978-4ff9-b145-ed08210f29bd",
    "metadata": {},
    "outputs": [
@@ -189,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "900c2cdb-e9c9-44af-8642-91468435838e",
    "metadata": {},
    "outputs": [
@@ -198,14 +226,15 @@
      "output_type": "stream",
      "text": [
       "x, y : 2 1\n",
-      "l, m: [1, 2, 3, 4] [1, 2, 3, 4]\n",
-      "modified: [1, 2, 3, 4, 5]\n",
-      "not modified: [1, 2, 3, 4, 5]\n"
+      "l, m: [1, 2, 3, 4, 5] [1, 2, 3, 4, 5]\n",
+      "modified l: [1, 2, 3, 4, 5, 5]\n",
+      "modified m: [1, 2, 3, 4, 5, 5]\n",
+      "not modified: [1, 2, 3, 4, 5, 5]\n"
      ]
     }
    ],
    "source": [
-    "#  Immutable objects (strings, ints, floats, bools,\n",
+    "#  Immutable objects (strings, ints, floats, bools),\n",
     "x = 1\n",
     "y = x\n",
     "x += 1  # Actually creates a new object that is 1 + 1 and assigns it to x\n",
@@ -215,15 +244,17 @@
     "l = [1, 2, 3]\n",
     "m = l\n",
     "l.append(4)\n",
+    "m.append(5)\n",
     "print(\"l, m:\", l, m)  # l == m\n",
     "\n",
     "# WARNING : passing a list to a function must be done knowing that it is a mutable object :\n",
-    "def f(l):\n",
-    "    l.append(5)\n",
+    "def f(l_):\n",
+    "    l_.append(5)\n",
     "f(l)\n",
-    "print(\"modified:\", l)\n",
-    "def f(l):\n",
-    "    l = [1, 2, 3, 4, 5, 6]  # Here, assign a new objects to l. Since it is not return, the initial object given to f remains unchanged.\n",
+    "print(\"modified l:\", l)\n",
+    "print(\"modified m:\", m)\n",
+    "def f(l_):\n",
+    "    l_ = [1, 2, 3, 4, 5, 6]  # Here, assign a new objects to l. Since it is not return, the initial object given to f remains unchanged.\n",
     "f(l)\n",
     "print(\"not modified:\", l)"
    ]
@@ -250,25 +281,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "f610a961-8811-4829-ac2e-5f40b842e73f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_17041/3780248659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# This however produces an error : strings are immutable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_7921/3780248659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# This however produces an error : strings are immutable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
      ]
     }
    ],
    "source": [
     "# This however produces an error : strings are immutable\n",
     "s[0] = \"c\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "90c54da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['coucou', 2, 3, 4, 5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l[0] = \"coucou\"\n",
+    "print(l)"
    ]
   },
   {
@@ -282,20 +332,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6a88364c-5859-48ee-83f5-254ed4e8ae00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside: 2\n",
+      "inside: 1\n",
+      "outside: 0\n",
+      "outside: 1\n",
+      "I arrived here\n",
+      "after if: 3\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "y = 1\n",
+    "\n",
     "def f2():\n",
     "    x = 2\n",
     "    print(\"inside:\", x)\n",
     "    print(\"inside:\", y)\n",
+    "    \n",
     "f2()\n",
+    "\n",
     "print(\"outside:\", x)\n",
     "print(\"outside:\", y)\n",
+    "\n",
     "if x == 0:  # True here\n",
     "    y = 3\n",
     "    print(\"I arrived here\")\n",
@@ -312,21 +379,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "108a42bf-14e2-4ee1-aa61-174b25dbb685",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside: 2\n",
+      "inside: 1\n",
+      "outside: 2\n",
+      "outside: 1\n",
+      "after if: 1\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "y = 1\n",
+    "\n",
     "def f2():\n",
     "    global x\n",
     "    x = 2\n",
     "    print(\"inside:\", x)\n",
     "    print(\"inside:\", y)\n",
+    "    \n",
     "f2()\n",
     "print(\"outside:\", x)\n",
     "print(\"outside:\", y)\n",
+    "\n",
     "if x == 0:  # False here\n",
     "    y = 3\n",
     "    print(\"I arrived here\")\n",
@@ -343,10 +425,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c224015e-32db-4ee6-aa0a-33be007ac77a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is zero\n",
+      "y is not two\n",
+      "y is not two\n",
+      "x is not in list l\n",
+      "y is in list l\n",
+      "x is lower or equal to y and both are strictly lower than two\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "y = 1\n",
@@ -390,10 +485,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "de1e9d07-aa0c-4500-b738-4be473292cf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[5, 6, 7, 8, 9]\n",
+      "[0, 3, 6, 9]\n",
+      "0\n",
+      "3\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "l = []\n",
     "for i in range(0, 10):\n",
@@ -413,7 +523,31 @@
     "l = []\n",
     "for i in range(0, 10, 3):\n",
     "    l.append(i)\n",
-    "print(l)"
+    "print(l)\n",
+    "\n",
+    "for elem in l:\n",
+    "    print(elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a7643f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1, 10, 2))"
    ]
   },
   {
@@ -426,10 +560,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7e3a09d9-b8aa-40c4-b138-a3d27fa9081f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition: 14\n",
+      "product: 33\n",
+      "division: 3.6666666666666665\n",
+      "power 1331\n",
+      "sqrt 1.7320508075688772\n",
+      "remainder 2 (dividing 11 by 3 does not give an integer, and the remainder is 2)\n",
+      "floor division 3 (floor value of y/x, same as int(y/x))\n",
+      "The last two at once: (3, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "y = 11\n",
@@ -460,10 +609,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "e152cd72-1672-49af-ad9d-0104b9a55ade",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "3+4i\n",
+      "5.0\n",
+      "3-4i\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'Complex' and 'Complex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_7921/3402249530.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mComplex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mz\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'Complex' and 'Complex'"
+     ]
+    }
+   ],
    "source": [
     "class Complex:  # 'class' means your are defining... a class. 'Complex' will be its name. By convention, use a capital first letter\n",
     "    \n",
@@ -481,13 +652,18 @@
     "            return f\"{self.a}+{self.b}i\"\n",
     "        else:\n",
     "            return f\"{self.a}{self.b}i\"\n",
+    "    \n",
+    "#     def __ge__(self, other):\n",
+    "#         raise ValueError(\"Can not compare Complex numbers\")\n",
     "\n",
     "z = Complex(3, 4)\n",
     "print(z.get_norm())\n",
     "print(z)\n",
     "z.b = -4\n",
     "print(z.get_norm())\n",
-    "print(z)"
+    "print(z)\n",
+    "x = Complex(1, 2)\n",
+    "z >= x"
    ]
   },
   {
@@ -502,10 +678,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "d27c9eed-435e-475a-9cb4-4f2da399ae14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'a',\n",
+       " 'b',\n",
+       " 'get_norm']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(z)"
    ]
@@ -540,10 +755,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "6405b9f1-e31f-4fda-a72e-d8cac88df633",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 4  # in binary, 4 is 100, so bit length is 3\n",
     "x.bit_length()"
@@ -552,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659c2cf7-5d6e-4bc5-a3df-82edf8ae9582",
+   "id": "1ec30ee3",
    "metadata": {},
    "outputs": [],
    "source": []
